force-app/main/default/objects/EinsteinResponseAction__c/EinsteinResponseAction__c.object-meta.xml
<CustomObject>
    <label>Einstein Response Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Response Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>