force-app/main/default/objects/EinsteinResponseAction__c/fields/ActionTarget__c.field-meta.xml
<CustomField>
    <fullName>ActionTarget__c</fullName>
    <label>Action Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Einstein Message</fullName>
            </value>
            <value>
                <fullName>Record Page</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>