force-app/main/default/objects/EinsteinResponseAction__c/fields/EinsteinResponse__c.field-meta.xml
<CustomField>
    <fullName>EinsteinResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Einstein Response</label>
    <referenceTo>EinsteinResponse__c</referenceTo>
    <relationshipLabel>Einstein Response Actions</relationshipLabel>
    <relationshipName>EinsteinResponseActions</relationshipName>
    <type>Lookup</type>
</CustomField>