force-app/main/default/objects/EinsteinResponseAction__c/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>