force-app/main/default/objects/EinsteinResponseAction__c/fields/NextMessageKeyword__c.field-meta.xml
<CustomField>
    <fullName>NextMessageKeyword__c</fullName>
    <label>Next Message Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>